--- a/my_dir/Makefile
+++ b/my_dir/Makefile
@@ -4,11 +4,14 @@ OBJ=$(patsubst %.cpp,%.o,$(SOURCES))
 EXEC=project
 
 $(EXEC): $(OBJ)
-        $(CC) -o $@ $^ -MD
+        $(CC) -o $@ $^
+
+%.o: %.cpp
+        $(CC) -c -MD $<
 
 include $(wildcard *.d)
 
-.PHONY: clean
+.PHONY: clean $(EXEC)
 
 clean:
         rm -f *.d
